--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@deck.gl/core": "^8.9.35",
+    "@deck.gl/layers": "^8.9.35",
+    "@deck.gl/mesh-layers": "^8.9.35",
+    "@deck.gl/react": "^8.9.35",
+    "@loaders.gl/obj": "^4.1.3",
+    "deck.gl": "^8.9.35",
+    "mapbox-gl": "^3.2.0",
+    "maplibre-gl": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-map-gl": "^7.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
