added the backend with some apis and already dockerized

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,3 +13,16 @@ services:
         target: /srv/app
     working_dir: /srv/app
     command: bash -c 'npm install && npm --host run dev '
+  backend:
+    build:
+      ./backend
+    ports:
+      - 8000:8000
+    tty: true
+    restart: always
+    volumes:
+      - type: bind
+        source: ./backend
+        target: /srv/app
+    working_dir: /srv/app
+    command: bash -c "python -m pip install -r requirements.txt && python manage.py runserver 0.0.0.0:8000"
