--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@deck.gl/mesh-layers": "^8.9.35",
     "@deck.gl/react": "^8.9.35",
     "@loaders.gl/obj": "^4.1.3",
+    "axios": "^1.6.7",
     "deck.gl": "^8.9.35",
     "mapbox-gl": "^3.2.0",
     "maplibre-gl": "^4.1.0",
