paraderos ahora visibles en el mapa

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,19 +6,23 @@ click-plugins==1.1.1
 cligj==0.7.2
 cloudpickle==3.0.0
 dask==2024.5.0
+dask-expr==1.1.0
 Django==5.0.6
 django-cors-headers==4.3.1
 django-rest-framework==0.1.0
 djangorestframework==3.15.1
+et-xmlfile==1.1.0
 fiona==1.9.6
 fsspec==2024.3.1
 geopandas==0.14.4
 importlib_metadata==7.1.0
 locket==1.0.0
 numpy==1.26.4
+openpyxl==3.1.2
 packaging==24.0
 pandas==2.2.2
 partd==1.4.2
+pyarrow==16.1.0
 pyproj==3.6.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
