fix: ahora los paquetes se instalan al crear el contenedor

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,6 @@
 FROM python:3.12
 
-# WORKDIR /usr/srv/app
-
-# # COPY requirements.txt ./
-# # RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements.txt ./
+RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8000 
