--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,17 @@
 FROM python:3.12
 
+RUN apt-get update && apt-get install -y zsh wget git
+
+RUN sh -c "$(wget https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh -O -)"
+
+RUN git clone https://github.com/zsh-users/zsh-autosuggestions ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions
+
+RUN git clone --depth=1 https://github.com/romkatv/powerlevel10k.git ${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/themes/powerlevel10k
+
+COPY .zshrc /root/.zshrc
+COPY .p10k.zsh /root/.p10k.zsh
+
+WORKDIR /srv/app
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
