--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@deck.gl/core": "^8.9.35",
-    "@deck.gl/layers": "^8.9.35",
-    "@deck.gl/mesh-layers": "^8.9.35",
-    "@deck.gl/react": "^8.9.35",
-    "@loaders.gl/obj": "^4.1.3",
-    "axios": "^1.6.7",
-    "deck.gl": "^8.9.35",
-    "mapbox-gl": "^3.2.0",
-    "maplibre-gl": "^4.1.0",
+    "@deck.gl/aggregation-layers": "^9.0.21",
+    "@deck.gl/geo-layers": "^9.0.21",
+    "@deck.gl/layers": "^9.0.21",
+    "@deck.gl/mesh-layers": "^9.0.21",
+    "@deck.gl/react": "^9.0.21",
+    "@loaders.gl/obj": "^4.2.2",
+    "axios": "^1.7.2",
+    "deck.gl": "^9.0.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-map-gl": "^7.1.7"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
